; ModuleID = '/home/carl/AnghaBench/openvpn/src/openvpn/extr_crypto.c_get_random.c'
source_filename = "/home/carl/AnghaBench/openvpn/src/openvpn/extr_crypto.c_get_random.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @get_random() #0 {
  %1 = alloca i64, align 8
  %2 = bitcast i64* %1 to i8*
  %3 = call i32 @prng_bytes(i8* %2, i32 8)
  %4 = load i64, i64* %1, align 8
  %5 = icmp slt i64 %4, 0
  br i1 %5, label %6, label %9

6:                                                ; preds = %0
  %7 = load i64, i64* %1, align 8
  %8 = sub nsw i64 0, %7
  store i64 %8, i64* %1, align 8
  br label %9

9:                                                ; preds = %6, %0
  %10 = load i64, i64* %1, align 8
  ret i64 %10
}

declare dso_local i32 @prng_bytes(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
